[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_idle_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_7.png" type="Texture" id=16]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_walk_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_jump_0.png" type="Texture" id=18]
[ext_resource path="res://Assets/Male/Character 1/Clothes 1/Character1M_1_jump_1.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Player/Camera2D.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Player/Chain.tscn" type="PackedScene" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.09896, 5.33333 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 16 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -9.53674e-07 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.4, 0.4 )
process_mode = 0
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
script = ExtResource( 20 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
frame = 5
playing = true

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SprintCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="Chain" parent="." instance=ExtResource( 21 )]
visible = false
position = Vector2( 2, -68 )

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_entered"]
